# ProgramacionProyectoII

./: .gitignore  build.sh  requirements.txt  vercel.json
PuntoVenta/: build.sh  install-poetry.py  pyproject.toml  requirements.txt  settings.py  urls.py  vercel.json  wsgi.py
PuntoVenta/PuntoVenta/: settings.py  wsgi.py
PuntoVenta/ventas/: admin.py  forms.py  models.py  urls.py  views.py
PuntoVenta/ventas/migrations/: 0001_initial.py  0002_remove_producto_create_remove_producto_update_and_more.py  0003_remove_cliente_create_remove_cliente_update_and_more.py
PuntoVenta/ventas/static/index/DataTables/: datatables.min.js
PuntoVenta/ventas/static/index/js/: main.js
PuntoVenta/ventas/templates/: base.html  inicio.html  productos.html  ventas.html
staticfiles/lib/adminlite/js/pages/: dashboard.js
staticfiles/lib/adminlite/plugins/jqvmap/: jquery.vmap.min.js
ventas/: models.py  urls.py  views.py
ventas/migrations/: 0001_initial.py
ventas/static/index/js/: main.js
ventas/static/lib/adminlite/js/: adminlte.js
ventas/templates/: add_ventas.html  clientes.html  inicio.html  signin.html
